# test-framework

./: .gitignore  .gitlab-ci.yml  Jenkinsfile  README.md  pyproject.toml
.github/workflows/: webtest.yml
examples/: runtime.yaml  smoke.yaml
examples/cases/: keyword_lifecycle.xml  login.xml  web_actions_extended.xml  web_actions_extended.yaml
examples/config/: runtime.yaml
framework/cli/: __init__.py  main.py
framework/core/: __init__.py  config.py  time.py
framework/dsl/: __init__.py  contract.py  models.py  xml_schema.py
framework/executor/: __init__.py  action_registry.py  execution_control.py  listener.py  models.py  runner.py  tag_expression.py
framework/keywords/: __init__.py  arguments.py  converters.py  decorators.py  docs.py  loader.py  registry.py  web.py
framework/logging/: __init__.py  runtime_logger.py
framework/notify/: __init__.py  dingtalk_notifier.py  dispatcher.py  email_notifier.py  webhook_notifier.py
framework/page_objects/: __init__.py  base_page.py
framework/parser/: __init__.py  base.py  json_parser.py  structured_payload.py  xml_parser.py  yaml_parser.py
framework/reporting/: __init__.py  allure_reporter.py  case_results.py  result_merge.py  statistics.py
framework/selenium/: __init__.py  driver_manager.py  errors.py  locators.py  session.py  wrapper.py
tests/: test_browser_keywords.py  test_cli_end_to_end.py  test_dsl_models.py  test_http_keywords.py  test_reports_and_integrations.py  test_runtime_execution.py
tests/integration/: test_allure_artifacts_flow.py  (+2 more)
webtest_core/: __init__.py  cli.py
(+85 files in other folders)
