[project]
name = "webtest-core"
version = "0.1.0"
description = "YAML-driven web automation framework built on Selenium"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.20.0",
    "PyYAML>=6.0.1",
    "pydantic>=2.7.0",
    "allure-python-commons>=2.13.5",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[project.scripts]
webtest = "webtest_core.cli:entrypoint"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webtest_core"]
